--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,7 +7,8 @@
     <string name="login_btn">Login</string>
     <string name="cancel_btn">Cancel</string>
     <string name="register_btn">Register</string>
-    <string name="create_btn">Create</string>
+    <string name="destroy_btn">Destroy</string>
+    <string name="confirm_btn">Confirm</string>
     <string name="discard_btn">Discard</string>
     <string name="add_secret">Add secret</string>
     <string name="rmv_secret">Remove secrets</string>
