--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,4 +15,11 @@
     <string name="sec_id_hint">Secret Id</string>
     <string name="add_prop">Add Property</string>
     <string name="save_all">Save all</string>
+    <string name="rmv_item">Remove Item</string>
+    <string name="sel_item">Select Item</string>
+    <string name="canc_pop">Cancel</string>
+    
+    <string name="list_err1">Cannot display list</string>
+    
+    <string name="manager_err1">Error querying secret manager</string>
 </resources>
