--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="discard_btn">Discard</string>
     <string name="add_secret">Add secret</string>
     <string name="rmv_secret">Remove secrets</string>
+    <string name="desel_all">Deselect all</string>
     <string name="sec_id_hint">Secret Id</string>
     <string name="add_prop">Add Property</string>
     <string name="save_all">Save all</string>
