Fixed login layout

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,8 +19,13 @@
     <string name="rmv_item">Remove Item</string>
     <string name="sel_item">Select Item</string>
     <string name="canc_pop">Cancel</string>
+    <string name="ok_dbtn">OK</string>
+    <string name="err_dmsg">Error</string>
     
     <string name="list_err1">Cannot display list</string>
+    <string name="pwd_mismatch">Password mismatch</string>
+    <string name="casket_err">Cannot open casket</string>
+    <string name="casket_operr">Cannot perform operation</string>
     
     <string name="manager_err1">Error querying secret manager</string>
 </resources>
