--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,12 +12,14 @@
     <string name="discard_btn">Discard</string>
     <string name="add_secret">Add secret</string>
     <string name="rmv_secret">Remove secrets</string>
+    <string name="rmv_all">Remove all</string>
     <string name="desel_all">Deselect all</string>
     <string name="sec_id_hint">Secret Id</string>
     <string name="add_prop">Add Property</string>
     <string name="save_all">Save all</string>
     <string name="rmv_item">Remove Item</string>
-    <string name="sel_item">Select Item</string>
+    <string name="sel_item">Toggle selection</string>
+    <string name="mod_item">Modify Item</string>
     <string name="canc_pop">Cancel</string>
     <string name="ok_dbtn">OK</string>
     <string name="err_dmsg">Error</string>
